[package]
name = "treasure_hunter"
version = "0.3.1"
authors = ["Thomas Lienbacher <lienbacher.tom@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
ansi_term = "0.12"
clap = "2.33"
num = "0.2"

[profile.release]
lto = true
opt-level = 'z'
overflow-checks = false
debug = false
panic = 'abort'
